# HarvestGuard

./: .design-state.json  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.ps1
.streamlit/: config.toml
sample_data/: baseline_telemetry.json  baseline_transactions.json
src/api/: main.py  models.py
src/api/routes/: alerts.py  ingest.py
src/core/: audit.py  correlator.py  db.py  quantum_monitor.py
src/ml/: explain.py  graph_model.py  inference.py  llm_reporter.py  train.py
src/scripts/: generate_baseline.py  run_demo.py
src/ui/: app.py  package-lock.json  package.json
src/ui/.streamlit/: config.toml
src/ui/components/: alert_feed.py  graph_view.py  shap_view.py  threat_chain.py
src/ui/src/: App.jsx  index.css
src/ui/src/components/: AlertFeed.jsx  GraphView.jsx  MetricTile.jsx  ProductInfoModal.jsx  QuantumRiskPanel.jsx  ShapView.jsx  TelemetryBar.jsx  ThreatChain.jsx
